# iot-rag

./: .gitignore  README.md  pyproject.toml  run_iot_planner.py
chroma_db/0798c573-30cc-4a4f-ac62-97bd36a887a5/: index_metadata.pickle
example_temp/: I_want_to_create_a_device_that_automatically_water_20251029_205736.md
example_temp/evaluation_results/: I_want_to_create_a_device_that_automatically_water_20251029_205736.json
mock_inventory/: mock_aliexpress_inventory.json  mock_digikey_inventory.json
src/agent/: agent.py  base_agent.py  cli.py  iot_planner.py  tracer.py
src/agent/tools/: component_sourcing_tool.py  iot_blueprint_generator.py  power_battery_estimator.py  research_tool.py
src/evaluation/: __init__.py  evaluation_tracker.py  evaluation_utils.py
src/iot_rag/: assets.py  cli.py  tool.py  vector_store.py
src/rag/: __init__.py  cli.py  parser.py  tool.py  vector_store.py
src/tests/: test_parser.py  test_tool.py  test_vector_store.py
tests/: test_assets.py  test_cli.py
