[project]
name = "iot-rag"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for Internet of Things (IoT) applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain-text-splitters>=1.0.0",
  "pymupdf>=1.26.5",
]

[project.scripts]
iot-rag = "iot_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iot_rag"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "N", "W"]
